# KernelImageProcessing

./: CMakeLists.txt  main.cpp
Image/: PPMImage.cpp  PPMImage.h  imageCreator.py
Results/: Result.cpp  Result.h
parallel/: ParallelGaussianBlur.cu  ParallelGaussianBlur.cuh
sequential/: SequentialGaussianBlur.cpp  SequentialGaussianBlur.h
